# trinity-travel-bus-company

./: .gitignore  CMakeLists.txt  index.html  simple_ai.cpp  test_main.cpp  trinity_travels.feature.txt  visual_demo.html
features/: seat_booking.feature
src/: ai_recommender.cpp  ai_recommender.h  step_definitions.cpp
